[package]
name = "inkeeper_os_windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user32-sys = "0.2.0"
regex = "1"
inkeeper_domain = { git = "https://github.com/usrsem/inkeeper_domain" }
inkeeper_os_boundary = { git = "https://github.com/usrsem/inkeeper_os_boundary" }

